# llm-epistemic-belief-7a32

./: README.md  REPORT.md  main.py  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml
data/processed/: dataset_metadata.json  study3_participant_responses.csv  study3_scenarios.csv
data/raw/: Check_your_attitudes_Study3_Raw_Wide.csv  Materials_Study3.docx  Study3_U.Rmd
logs/: research_prompt.txt  session_instructions.txt
results/metrics/: additional_metrics.json  correlation_analysis.json  llm_detailed_predictions.json  logistic_classification_report.txt  mcnemar_tests.json  metrics_summary.json  predictions.csv
src/: analyze_results.py  data_prep.py  run_experiments.py
